[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/EquationSquareRoot.gd" type="Script" id=1]
[ext_resource path="res://Assets/Equation_atlas.tres" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 17 )

[sub_resource type="CircleShape2D" id=2]
radius = 17.0

[node name="EquationSquare" type="Node2D"]
script = ExtResource( 1 )

[node name="ClickPlace" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickPlace"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 180, 0, 60, 30 )

[node name="EnemyPlace" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPlace"]
position = Vector2( 5, 0 )
z_index = -1
shape = SubResource( 2 )

[connection signal="input_event" from="ClickPlace" to="." method="_on_ClickPlace_input_event"]
[connection signal="mouse_entered" from="ClickPlace" to="." method="_on_ClickPlace_mouse_entered"]
[connection signal="mouse_exited" from="ClickPlace" to="." method="_on_ClickPlace_mouse_exited"]
